fix: Fix openapi
